<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    tools:context=".LoginActivity">

    <include layout="@layout/bar_layout"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"/>




        <com.rengwuxian.materialedittext.MaterialEditText
            android:maxLength="30"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"

            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:maxLength="11"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"

            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:background="@color/bar"

            />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Forgot you password"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />



    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleloginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom|center"
android:layout_alignParentBottom="true"
        android:paddingBottom="40dp"
        ></com.google.android.gms.common.SignInButton>

    </RelativeLayout>